--- a/.github/workflows/pr-workflow.yml
+++ b/.github/workflows/pr-workflow.yml
@@ -3,7 +3,7 @@ name: PR Workflow
 on:
   pull_request:
     # Trigger only when a PR is created
-    types: [opened]
+    types: [opened, reopened]
     branches: [ main, develop ]
 
 jobs:
