--- a/.github/workflows/pr-workflow.yml
+++ b/.github/workflows/pr-workflow.yml
@@ -16,6 +16,9 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.10'
+      - name: Install project
+        run: |
+          pip install -e .
       - name: Install Flake8
         run: |
           python -m pip install flake8
