local package installation added for pipelines

--- a/.github/workflows/gold_pipeline.yml
+++ b/.github/workflows/gold_pipeline.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Install dependencies
         run: |
           pip install azure-storage-file-datalake
+          pip install -e .
+
           # Add requirements for your generation script here (e.g., zarr, numpy)
           # pip install zarr numpy 
 
