--- a/.github/workflows/silver_pipeline.yml
+++ b/.github/workflows/silver_pipeline.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install azure-storage-file-datalake
+          pip install -e .
           # Add requirements for your generation script here (e.g., zarr, numpy)
           # pip install zarr numpy 
 
