--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,152 @@
---index-url https://download.pytorch.org/whl/cu126
-numpy
-pandas         
-packaging              
-xarray          
-netCDF4
-torch
-torchvision       
-zarr         
-h5netcdf              
-ipykernel
-matplotlib
-seaborn
-dask[complete]
-distributed         
-dask-expr              
-pytest
-
-# azure-storage-blob>=12.25.0   # Azure Blob Storage (Jan 2026 release)
-# azure-identity>=1.20.0        # Azure authentication
-# azure-storage-file-datalake>=12.17.0  # Data Lake Gen2 support
-# azure-ai-ml>=1.22.0          # Azure ML integration
-# azure-keyvault-secrets>=4.9.0 # Key Vault for secrets management
-
-
-fsspec>=2024.10.0          
-adlfs>=2024.7.0              
-
-blosc2>=2.7.0                
-lz4>=4.3.0                   
-zstandard>=0.23.0            
-numcodecs>=0.13.0,<0.16.0   
-tqdm>=4.66.0                 
-click>=8.1.0                 
-python-dotenv>=1.0.0         
-cftime>=1.6.0                
+accelerate==1.12.0
+adlfs==2025.8.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
+anyio==4.12.1
+asciitree==0.3.3
+asttokens==3.0.1
+async-timeout==5.0.1
+attrs==25.4.0
+azure-core==1.38.0
+azure-datalake-store==0.0.53
+azure-identity==1.25.1
+azure-storage-blob==12.28.0
+azure-storage-file-datalake==12.23.0
+blosc2==4.0.0
+bokeh==3.8.2
+certifi==2026.1.4
+cffi==2.0.0
+cftime==1.6.5
+charset-normalizer==3.4.4
+click==8.3.1
+-e git+ssh://git@github.com/berkesenturk/cnn_cloud_hole_detection.git@ec5755faf015053fcf2f642bffd05b0df36c0556#egg=cloud_hole_detection
+cloudpickle==3.1.2
+comm==0.2.3
+contourpy==1.3.2
+cryptography==46.0.4
+cuda-bindings==12.9.4
+cuda-pathfinder==1.3.3
+cycler==0.12.1
+dask==2026.1.1
+dask-expr==2.0.0
+debugpy==1.8.19
+decorator==5.2.1
+distributed==2026.1.1
+exceptiongroup==1.3.1
+executing==2.2.1
+fasteners==0.20
+filelock==3.20.3
+fonttools==4.61.1
+frozenlist==1.8.0
+fsspec==2026.1.0
+h11==0.16.0
+h5netcdf==1.8.1
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface_hub==1.3.7
+idna==3.11
+importlib_metadata==8.7.1
+iniconfig==2.3.0
+ipykernel==7.1.0
+ipython==8.38.0
+isodate==0.7.2
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.3
+jupyter_client==8.8.0
+jupyter_core==5.9.1
+kiwisolver==1.4.9
+locket==1.0.0
+lz4==4.4.5
+MarkupSafe==3.0.3
+matplotlib==3.10.8
+matplotlib-inline==0.2.1
+mpmath==1.3.0
+msal==1.34.0
+msal-extensions==1.3.1
+msgpack==1.1.2
+multidict==6.7.1
+narwhals==2.15.0
+ndindex==1.10.1
+nest-asyncio==1.6.0
+netCDF4==1.7.4
+networkx==3.4.2
+numcodecs==0.13.1
+numexpr==2.14.1
+numpy==2.2.6
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.4.5
+nvidia-nvtx-cu12==12.8.90
+packaging==26.0
+pandas==2.3.3
+parso==0.8.5
+partd==1.4.2
+pexpect==4.9.0
+pillow==12.1.0
+platformdirs==4.5.1
+pluggy==1.6.0
+prompt_toolkit==3.0.52
+propcache==0.4.1
+psutil==7.2.2
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==23.0.0
+pycparser==3.0
+Pygments==2.19.2
+PyJWT==2.10.1
+pyparsing==3.3.2
+pytest==9.0.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+pyzmq==27.1.0
+regex==2026.1.15
+requests==2.32.5
+safetensors==0.7.0
+scikit-learn==1.7.2
+scipy==1.15.3
+seaborn==0.13.2
+shellingham==1.5.4
+six==1.17.0
+sortedcontainers==2.4.0
+stack-data==0.6.3
+sympy==1.14.0
+tblib==3.2.2
+threadpoolctl==3.6.0
+tokenizers==0.22.2
+tomli==2.4.0
+toolz==1.1.0
+torch==2.10.0
+torchvision==0.25.0+cu126
+tornado==6.5.4
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==5.0.0
+triton==3.6.0
+typer-slim==0.21.1
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+wcwidth==0.5.0
+xarray==2025.6.1
+xyzservices==2025.11.0
+yarl==1.22.0
+zarr==2.18.3
+zict==3.0.0
+zipp==3.23.0
+zstandard==0.25.0
