--- a/.github/workflows/pr-workflow.yml
+++ b/.github/workflows/pr-workflow.yml
@@ -11,11 +11,11 @@ jobs:
 
     steps:
       - name: Check out repo
-        uses: actions/checkout@main
-      - name: Use Python version 3.10
-        uses: actions/setup-python@v3
+        uses: actions/checkout@v4
+      - name: Use Python version 3.10.12
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.10.12'
       - name: Install project
         run: |
           pip install -e .
