--- a/requirements.txt
+++ b/requirements.txt
@@ -131,8 +131,8 @@ threadpoolctl==3.6.0
 tokenizers==0.22.2
 tomli==2.4.0
 toolz==1.1.0
-torch==2.10.0
-torchvision==0.25.0+cu126
+torch --index-url https://download.pytorch.org/whl/cu126
+torchvision --index-url https://download.pytorch.org/whl/cu126
 tornado==6.5.4
 tqdm==4.67.1
 traitlets==5.14.3
