--- a/.github/workflows/gold_pipeline.yml
+++ b/.github/workflows/gold_pipeline.yml
@@ -1,4 +1,4 @@
-name: gold Data Pipeline
+name: Gold Data Pipeline
 
 on:
   workflow_dispatch: # Allows manual trigger
@@ -25,11 +25,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install azure-storage-file-datalake
-          pip install -e .
-
-          # Add requirements for your generation script here (e.g., zarr, numpy)
-          # pip install zarr numpy 
+          python -m pip install -r requirements.txt
 
       - name: Generate gold Data
         # Replace this with the command to run your script
