--- a/src/train_job.yml
+++ b/src/train_job.yml
@@ -1,7 +1,7 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
-code: ./src
+code: training
 command: >-
-  python train_azure.py
+  python train.py
   --data_path ${{inputs.dataset}}
   --freeze_backbone
   --epochs 50
