--- a/.github/workflows/gold_pipeline.yml
+++ b/.github/workflows/gold_pipeline.yml
@@ -1,7 +1,7 @@
 name: Gold Data Pipeline
 
 on:
-  workflow_dispatch: # Allows manual trigger
+  # workflow_dispatch: # Allows manual trigger
   push:
     branches: [ "main" ]
 
