--- a/.github/workflows/auto_train_when_push.yml
+++ b/.github/workflows/auto_train_when_push.yml
@@ -11,41 +11,32 @@ env:
   AZURE_ML_WORKSPACE:    ${{ secrets.AZURE_ML_WORKSPACE }}
 
 jobs:
-  development:
-    name: Train model
-    
+  train-model:
+    name: Submit Azure ML Training Job
     runs-on: ubuntu-latest
     
-    environment:
-      name: "development"
-    
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install Azure ML SDK
+        run: |
+          pip install azure-ai-ml azure-identity
 
       - name: Azure login
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-      
-      # FIX 1: Install specific version of Azure ML extension
-      - name: Install Azure ML extension
-        run: |
-          az extension remove -n ml || true
-          az extension add -n ml --version 2.22.0 --yes
-          az version
 
-      # FIX 2: Set subscription before running job
-      - name: Set Azure subscription
+      - name: Submit training job to Azure ML
+        env:
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          AZURE_RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
+          AZURE_ML_WORKSPACE: ${{ secrets.AZURE_ML_WORKSPACE }}
         run: |
-          az account set --subscription "$AZURE_SUBSCRIPTION_ID"
-          az account show
-
-      # FIX 3: Run training job with correct parameters
-      - name: Run training job
-        run: |
-          az ml job create \
-            --file src/train_job.yml \
-            --resource-group "$AZURE_RESOURCE_GROUP" \
-            --workspace-name "$AZURE_ML_WORKSPACE" \
-            --subscription "$AZURE_SUBSCRIPTION_ID"
+          python src/training/submit_training.py
